# internet-status-checker

./: .gitignore  Cargo.toml  README.md  config.sample.toml  internet-status-checker.sample.service
src/: main.rs
